--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "laravel/framework": "^8.0|^9.0|^10.0|^11.0",
-        "laravel/nova": "^4.0",
-        "spatie/laravel-medialibrary": "^8.0|^9.0|^10.0|^11.0"
+        "php": ">=8.1",
+        "laravel/framework": "^10.0|^11.0",
+        "laravel/nova": "^4.0|^5.0",
+        "spatie/laravel-medialibrary": "^9.0|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
